# ProjectSparksNativeAndroid

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: SparksAR1.7.apk  SparksARGForm.apk
app/src/main/res/anim/: bottom_nav_item_clicked.xml  bottom_nav_item_selected.xml
app/src/main/res/color/: bottom_nav_item_color.xml
app/src/main/res/drawable/: bg_button_glowing.xml  bg_button_nav_dark.xml  bg_button_sparksar_gradient.xml  bg_center_button.xml  bg_center_item.xml  bg_edittext_rounded_dark.xml  bg_glass_edittext.xml  bg_glass_input.xml  bg_glowing_button.xml  bg_gradient_contacts.xml  bg_gradient_edit_profile.xml  bg_gradient_login.xml  bg_gradient_privacy.xml  bg_gradient_profile.xml  bg_gradient_register.xml  bg_link_rounded.xml  bg_sparksar.xml  bottom_nav_background.xml  bottom_nav_item_background.xml  bottom_nav_ripple_effect.xml  ic_leaderboard.xml  ic_play.xml  ic_profile.xml
app/src/main/res/layout/: activity_contacts.xml  activity_editprofile.xml  activity_game.xml  activity_login.xml  activity_privacy_policy.xml  activity_profile.xml  activity_register.xml  bottom_nav.xml
app/src/main/res/layout-v31/: activity_profile.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: filepaths.xml
app/unityLibrary/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
unityLibrary/: build.gradle
unityLibrary/src/main/Il2CppOutputProject/Source/il2cppOutput/: Assembly-CSharp_CodeGen.c  GenericMethods__1.cpp  (+86 more)
unityLibrary/src/main/cpp/: CMakeLists.txt
(+120 files in other folders)
